// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ AddSubRepositoryModal ]] renders various states of the add sub repository modal: {"primaryActionLoading":false,"showError":false} 1`] = `
"<zmodal-stub title=\\"New sub-repository\\" width=\\"narrow\\">
  <div class=\\"space-y-4 p-4\\">
    <div class=\\"space-y-2\\"><label for=\\"git-branch\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter your branch</label>
      <zinput-stub icon=\\"z-git-branch\\" name=\\"git-branch\\" placeholder=\\"main\\" size=\\"small\\" value=\\"main\\" class=\\"border border-ink-50 focus-within:border-vanilla-400\\"></zinput-stub>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"sub-repository-path\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter sub-repository path</label>
      <zinputgroup-stub icon=\\"z-git-branch\\" name=\\"sub-repository-path\\" placeholder=\\"Enter relative path\\" size=\\"small\\" value=\\"\\"></zinputgroup-stub>
    </div>
    <!---->
    <div class=\\"w-full gap-x-1 text-right\\">
      <zbutton-stub size=\\"small\\">
        <div class=\\"inline-flex items-center gap-x-1\\"><span>Next</span>
          <zicon-stub icon=\\"arrow-right\\" color=\\"current\\" class=\\"\\"></zicon-stub>
        </div>
      </zbutton-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ AddSubRepositoryModal ]] renders various states of the add sub repository modal: {"primaryActionLoading":false,"showError":true} 1`] = `
"<zmodal-stub title=\\"New sub-repository\\" width=\\"narrow\\">
  <div class=\\"space-y-4 p-4\\">
    <div class=\\"space-y-2\\"><label for=\\"git-branch\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter your branch</label>
      <zinput-stub icon=\\"z-git-branch\\" name=\\"git-branch\\" placeholder=\\"main\\" size=\\"small\\" value=\\"main\\" class=\\"border border-ink-50 focus-within:border-vanilla-400\\"></zinput-stub>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"sub-repository-path\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter sub-repository path</label>
      <zinputgroup-stub icon=\\"z-git-branch\\" name=\\"sub-repository-path\\" placeholder=\\"Enter relative path\\" size=\\"small\\" value=\\"\\"></zinputgroup-stub>
    </div>
    <z-alert type=\\"danger\\">Something went wrong while creating the sub-repository.</z-alert>
    <div class=\\"w-full gap-x-1 text-right\\">
      <zbutton-stub size=\\"small\\">
        <div class=\\"inline-flex items-center gap-x-1\\"><span>Next</span>
          <zicon-stub icon=\\"arrow-right\\" color=\\"current\\" class=\\"\\"></zicon-stub>
        </div>
      </zbutton-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ AddSubRepositoryModal ]] renders various states of the add sub repository modal: {"primaryActionLoading":true,"showError":false} 1`] = `
"<zmodal-stub title=\\"New sub-repository\\" width=\\"narrow\\">
  <div class=\\"space-y-4 p-4\\">
    <div class=\\"space-y-2\\"><label for=\\"git-branch\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter your branch</label>
      <zinput-stub icon=\\"z-git-branch\\" name=\\"git-branch\\" placeholder=\\"main\\" size=\\"small\\" value=\\"main\\" class=\\"border border-ink-50 focus-within:border-vanilla-400\\"></zinput-stub>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"sub-repository-path\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter sub-repository path</label>
      <zinputgroup-stub icon=\\"z-git-branch\\" name=\\"sub-repository-path\\" placeholder=\\"Enter relative path\\" size=\\"small\\" value=\\"\\"></zinputgroup-stub>
    </div>
    <!---->
    <div class=\\"w-full gap-x-1 text-right\\">
      <zbutton-stub disabled=\\"true\\" size=\\"small\\">
        <div class=\\"inline-flex items-center gap-x-1\\"><span>Next</span>
          <zicon-stub icon=\\"spin-loader\\" color=\\"current\\" class=\\"animate-spin\\"></zicon-stub>
        </div>
      </zbutton-stub>
    </div>
  </div>
</zmodal-stub>"
`;

exports[`[[ AddSubRepositoryModal ]] renders various states of the add sub repository modal: {"primaryActionLoading":true,"showError":true} 1`] = `
"<zmodal-stub title=\\"New sub-repository\\" width=\\"narrow\\">
  <div class=\\"space-y-4 p-4\\">
    <div class=\\"space-y-2\\"><label for=\\"git-branch\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter your branch</label>
      <zinput-stub icon=\\"z-git-branch\\" name=\\"git-branch\\" placeholder=\\"main\\" size=\\"small\\" value=\\"main\\" class=\\"border border-ink-50 focus-within:border-vanilla-400\\"></zinput-stub>
    </div>
    <div class=\\"space-y-2\\"><label for=\\"sub-repository-path\\" class=\\"text-xs font-normal text-vanilla-400\\">Enter sub-repository path</label>
      <zinputgroup-stub icon=\\"z-git-branch\\" name=\\"sub-repository-path\\" placeholder=\\"Enter relative path\\" size=\\"small\\" value=\\"\\"></zinputgroup-stub>
    </div>
    <z-alert type=\\"danger\\">Something went wrong while creating the sub-repository.</z-alert>
    <div class=\\"w-full gap-x-1 text-right\\">
      <zbutton-stub disabled=\\"true\\" size=\\"small\\">
        <div class=\\"inline-flex items-center gap-x-1\\"><span>Next</span>
          <zicon-stub icon=\\"spin-loader\\" color=\\"current\\" class=\\"animate-spin\\"></zicon-stub>
        </div>
      </zbutton-stub>
    </div>
  </div>
</zmodal-stub>"
`;
